--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/bamsi/leaderboard/issues"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
